# quakesdl2

./: Makefile.am  autogen.sh  configure.ac
client/: Makefile.am  cl_cin.c  cl_ents.c  cl_input.c  cl_main.c  cl_parse.c  client.h  console.c  menu.c  ref.h  snd_dma.c  snd_mix.c
ctf/: g_items.c  p_weapon.c
game/: Makefile.am  q_shared.h
platform/: Makefile.am  platform.h
platform/linux/: q_shlinux.c  qgl_linux.c  rw_x11.c  sys_linux.c  vid_so.c
platform/null/: sys_null.c
platform/sdl/: cd_dummy.c  in.c  in.h  in_dummy.c  kbd.c  kbd.h  net_udpsock.c  snd_dummy.c  snd_linuxa.c  snd_sdl.c  sys.c  sys_dir.c  sys_hunk.c  vid.c  vid_menu_linux.c
platform/sdl/ref/: gl_sdl.c  in.c  in_sdl.h  input.c  kbd.c  qgl_sdl.c  rw_sdl.c
qcommon/: Makefile.am  cmd.c  common.c  cvar.c  files.c  net_chan.c  qcommon.h
ref_gl/: Makefile.am  Makefile.inc  gl_rmain.c  gl_rmisc.c  qgl.h
ref_gl/linux/: Makefile.am
ref_gl/sdl2/: Makefile.am
ref_soft/: Makefile.am  Makefile.inc  r_aclip.c  r_alias.c  r_edge.c  r_local.h  r_main.c  r_misc.c  r_polyse.c  r_rast.c  r_scan.c  r_surf.c
ref_soft/linux/: Makefile.am
ref_soft/sdl2/: Makefile.am
server/: Makefile.am  sv_ccmds.c  sv_init.c  sv_main.c  sv_send.c  sv_user.c
